# seeded_game_of_life

./: Cargo.toml  README.md  TUTO.md  index.html
benches/: bench.rs
src/: canvas.rs  fps.rs  lib.rs  universe.rs  utils.rs
tests/: universe.rs  web.rs
